--- a/projectA.ipynb
+++ b/projectA.ipynb
@@ -8,10 +8,12 @@
     "# DATA620 Final Project A\n",
     "## Network Analysis\n",
     "\n",
+    "Video: https://ufile.io/nl4xsrgc\n",
+    "\n",
     "# Project Description\n",
     "***\n",
     "\n",
-    "We would like to find businesses (or ideally people) who are influential in drawing foreign and domestic investment in Myanmar.  Through basic network analysis techniques, we hope to find a clique of people or companies with common investment sources or common activities.\n",
+    "We would like to find businesses who are influential in drawing foreign and domestic investment in Myanmar.  Through basic network analysis techniques, we hope to find a clique of companies with common investment sources or common activities by referencing officers who are registered to more than one company.\n",
     "\n",
     "# Data Description\n",
     "***\n",
@@ -23,11 +25,9 @@
     "\n",
     "1. About 1/4 of the companies in Myanmar Financials paid somebody to approve their incorporation documents without addresses or names... We can remove companies with no listed officers.\n",
     "\n",
-    "2. People in Myanmar are named for astrological information pertaining to their birth.  There is no family name, and many people have the same names.  We also cannot do anything about this.\n",
+    "2. People in Myanmar are named for astrological information pertaining to their birth.  There is no family name, and many people have the same names.  with the possibility of 1 of 2 or no titles, and a conservative estimate of 40 possible name words, we can expect around 200,000 different name combinations.  Some will be more common than others, but this is not a huge problem for the scale and shape of our data.\n",
     "\n",
     "3. A small number of names are given in Burmese script, which is included in UTF-8, but is unreadable to our team.  We can leave the script as-is, and remove punctuation.\n",
-    "\n",
-    "4. Most companies did not apply for investment approval.  We will focus only on companies with investment records.\n",
     "\n",
     "# Method\n",
     "***\n",
@@ -45,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "339341fd",
+   "id": "d6cac666",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,16 +62,8 @@
     "import string\n",
     "from collections import defaultdict\n",
     "from itertools import combinations\n",
-    "from pyvis.network import Network"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "d6cac666",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "from pyvis.network import Network\n",
+    "\n",
     "# Company incorporation documents\n",
     "com_dir = Path('/home/s/fpa/data/company_info')\n",
     "# Investment proposals and information about real projects\n",
@@ -120,12 +112,15 @@
     "- Trims away the connections weighted less than the integer\n",
     "- Returns a new networkX graph object\n",
     "\n",
-    "#### islandMethod()"
+    "#### islandMethod()\n",
+    "- Takes a networkX graph object and an integer\n",
+    "- Iterates trimEdges() on the graph for predefined number of trials\n",
+    "- Returns a list of graphs with some metadata"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "c6317ddc",
    "metadata": {},
    "outputs": [],
@@ -236,40 +231,26 @@
    "metadata": {},
    "source": [
     "# Preprocessing\n",
-    "***"
+    "***\n",
+    "\n",
+    "Below, we load the data, clean it up, and generate an edge list to be used in our network graph."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "c22375ea",
    "metadata": {},
    "outputs": [],
    "source": [
     "companies = cleanDF(companyInfo(pathToList(com_dir)))\n",
     "# Drop rows with no names\n",
-    "companies = companies[companies.officer0 != 'nan']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "9de325ed",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "companies = companies[companies.officer0 != 'nan']\n",
+    "\n",
     "investments = investmentInfo(pathToList(inv_dir))\n",
     "edges = defineEdges(companies, investments)\n",
-    "expanded_edges = expandEdges(edges)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "42c0d13b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "expanded_edges = expandEdges(edges)\n",
+    "\n",
     "reversed_edges = defaultdict(list)\n",
     "for key, value in edges.items():\n",
     "    for item in value:\n",
@@ -289,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "id": "6999c2de",
    "metadata": {},
    "outputs": [
@@ -299,7 +280,6 @@
      "text": [
       "Total Nodes:   217824 \n",
       " Total Edges:   1029353 \n",
-      " Bipartite Nodes:   217784 \n",
       " Bipartite Edges:   4000128\n"
      ]
     }
@@ -320,14 +300,12 @@
     "      '\\n',\n",
     "      'Total Edges:  ', G.number_of_edges(),\n",
     "      '\\n',\n",
-    "      'Bipartite Nodes:  ', P.number_of_nodes(),\n",
-    "      '\\n',\n",
     "      'Bipartite Edges:  ', P.number_of_edges())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "c7ab4dd2",
    "metadata": {
     "scrolled": true
@@ -1215,7 +1193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "id": "5b31f437",
    "metadata": {
     "scrolled": false
@@ -1252,83 +1230,83 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>မြန်မာမင်းဒွန်းဂါးမင့်မင်နျူဖက်ချားရင်းကုမ္ပဏီလီမိတက်</th>\n",
-       "      <td>67</td>\n",
-       "      <td>0.705263</td>\n",
-       "      <td>0.523930</td>\n",
-       "      <td>0.719408</td>\n",
-       "      <td>0.417344</td>\n",
+       "      <td>122</td>\n",
+       "      <td>0.713450</td>\n",
+       "      <td>0.438080</td>\n",
+       "      <td>0.745434</td>\n",
+       "      <td>0.383041</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>ထရိုင်းဒင့်မြန်မာဂျင်နရယ်ထရိတ်ဒင်းကုမ္ပဏီလီမိတက်</th>\n",
-       "      <td>61</td>\n",
-       "      <td>0.642105</td>\n",
-       "      <td>0.490881</td>\n",
-       "      <td>0.677090</td>\n",
-       "      <td>0.335965</td>\n",
+       "      <td>117</td>\n",
+       "      <td>0.684211</td>\n",
+       "      <td>0.434960</td>\n",
+       "      <td>0.728178</td>\n",
+       "      <td>0.310449</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>အရှေ့တိုင်းအထည်ချုပ်ကုမ္ပဏီလီမိတက်</th>\n",
+       "      <td>102</td>\n",
+       "      <td>0.596491</td>\n",
+       "      <td>0.382035</td>\n",
+       "      <td>0.680894</td>\n",
+       "      <td>0.289890</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>စူပါဂါးမင့်န်ကုမ္ပဏီလီမိတက်</th>\n",
+       "      <td>10</td>\n",
+       "      <td>0.058480</td>\n",
+       "      <td>0.056768</td>\n",
+       "      <td>0.433296</td>\n",
+       "      <td>0.001183</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>အုန်းမိသားစုကုမ္ပဏီလီမိတက်</th>\n",
        "      <td>9</td>\n",
-       "      <td>0.094737</td>\n",
-       "      <td>0.111693</td>\n",
-       "      <td>0.416043</td>\n",
-       "      <td>0.003602</td>\n",
+       "      <td>0.052632</td>\n",
+       "      <td>0.021807</td>\n",
+       "      <td>0.329741</td>\n",
+       "      <td>0.033758</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>ခရစ်စတယ်လ်ဂါးမင့်အင်န်နစ်တင်းအင်ဒက်စ်တရီကုမ္ပဏီလီမိတက် krystal garment  knitting industry co</th>\n",
-       "      <td>4</td>\n",
-       "      <td>0.042105</td>\n",
-       "      <td>0.102585</td>\n",
-       "      <td>0.437109</td>\n",
-       "      <td>0.017885</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0.029240</td>\n",
+       "      <td>0.074167</td>\n",
+       "      <td>0.472332</td>\n",
+       "      <td>0.011386</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>ရတနာနစ်တ်အင်န်ဂါးမန့်တ်မန်နူဖက်ချားရင်းကုမ္ပဏီလီမိတက် yandana knit and garment manufacturing</th>\n",
-       "      <td>4</td>\n",
-       "      <td>0.042105</td>\n",
-       "      <td>0.102585</td>\n",
-       "      <td>0.437109</td>\n",
-       "      <td>0.017885</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>မြန်မာမင်းဒွန်းဂါးမင့်မင်နျူဖက်ချားရင်း ကုမ္ပဏီလီမိတက်</th>\n",
-       "      <td>3</td>\n",
-       "      <td>0.031579</td>\n",
-       "      <td>0.100925</td>\n",
-       "      <td>0.426316</td>\n",
-       "      <td>0.000416</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>super ace international co  စူပါအေ့စ်အင်တာနေရှင်နယ်ကုမ္ပဏီလီမိတက်</th>\n",
-       "      <td>3</td>\n",
-       "      <td>0.031579</td>\n",
-       "      <td>0.100925</td>\n",
-       "      <td>0.426316</td>\n",
-       "      <td>0.000416</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0.029240</td>\n",
+       "      <td>0.074167</td>\n",
+       "      <td>0.472332</td>\n",
+       "      <td>0.011386</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>ငွေပင်လယ်လှိုင်းတွန့်စက္ကူဘူးထုတ်လုပ်ရေးကုမ္ပဏီလီမိတက်silver sea paper carton box production co</th>\n",
-       "      <td>3</td>\n",
-       "      <td>0.031579</td>\n",
-       "      <td>0.100925</td>\n",
-       "      <td>0.426316</td>\n",
-       "      <td>0.000416</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0.023392</td>\n",
+       "      <td>0.073697</td>\n",
+       "      <td>0.466726</td>\n",
+       "      <td>0.000310</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>အပိုလိုဂါးမင့်ကုမ္ပဏီလီမိတက်</th>\n",
-       "      <td>3</td>\n",
-       "      <td>0.031579</td>\n",
-       "      <td>0.018530</td>\n",
-       "      <td>0.295142</td>\n",
-       "      <td>0.017973</td>\n",
+       "      <th>ထွန်းပဒေသာအင်ဒတ်စတြီးစ်အင်န် ထရိတ်ဒင်းကုမ္ပဏီလီမိတက်</th>\n",
+       "      <td>4</td>\n",
+       "      <td>0.023392</td>\n",
+       "      <td>0.071733</td>\n",
+       "      <td>0.476626</td>\n",
+       "      <td>0.007964</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>ပစိဖိတ်ဂါးမင့် မင်နယူဖတ်ချားရင်း ကုမ္ပဏီ လီမိတက် pacific garment manufacturing co</th>\n",
-       "      <td>3</td>\n",
-       "      <td>0.031579</td>\n",
-       "      <td>0.100925</td>\n",
-       "      <td>0.426316</td>\n",
-       "      <td>0.000416</td>\n",
+       "      <th>မြန်မာမင်းဒွန်းဂါးမင့်မင်နျူဖက်ချားရင်း ကုမ္ပဏီလီမိတက်</th>\n",
+       "      <td>4</td>\n",
+       "      <td>0.023392</td>\n",
+       "      <td>0.073697</td>\n",
+       "      <td>0.466726</td>\n",
+       "      <td>0.000310</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1336,43 +1314,43 @@
       ],
       "text/plain": [
        "                                                    degree  degree_centrality  \\\n",
-       "မြန်မာမင်းဒွန်းဂါးမင့်မင်နျူဖက်ချားရင်းကုမ္ပဏီလ...      67           0.705263   \n",
-       "ထရိုင်းဒင့်မြန်မာဂျင်နရယ်ထရိတ်ဒင်းကုမ္ပဏီလီမိတက်        61           0.642105   \n",
-       "စူပါဂါးမင့်န်ကုမ္ပဏီလီမိတက်                              9           0.094737   \n",
-       "ခရစ်စတယ်လ်ဂါးမင့်အင်န်နစ်တင်းအင်ဒက်စ်တရီကုမ္ပဏီ...       4           0.042105   \n",
-       "ရတနာနစ်တ်အင်န်ဂါးမန့်တ်မန်နူဖက်ချားရင်းကုမ္ပဏီလ...       4           0.042105   \n",
-       "မြန်မာမင်းဒွန်းဂါးမင့်မင်နျူဖက်ချားရင်း ကုမ္ပဏီ...       3           0.031579   \n",
-       "super ace international co  စူပါအေ့စ်အင်တာနေရှင...       3           0.031579   \n",
-       "ငွေပင်လယ်လှိုင်းတွန့်စက္ကူဘူးထုတ်လုပ်ရေးကုမ္ပဏီ...       3           0.031579   \n",
-       "အပိုလိုဂါးမင့်ကုမ္ပဏီလီမိတက်                             3           0.031579   \n",
-       "ပစိဖိတ်ဂါးမင့် မင်နယူဖတ်ချားရင်း ကုမ္ပဏီ လီမိတက...       3           0.031579   \n",
+       "မြန်မာမင်းဒွန်းဂါးမင့်မင်နျူဖက်ချားရင်းကုမ္ပဏီလ...     122           0.713450   \n",
+       "ထရိုင်းဒင့်မြန်မာဂျင်နရယ်ထရိတ်ဒင်းကုမ္ပဏီလီမိတက်       117           0.684211   \n",
+       "အရှေ့တိုင်းအထည်ချုပ်ကုမ္ပဏီလီမိတက်                     102           0.596491   \n",
+       "စူပါဂါးမင့်န်ကုမ္ပဏီလီမိတက်                             10           0.058480   \n",
+       "အုန်းမိသားစုကုမ္ပဏီလီမိတက်                               9           0.052632   \n",
+       "ခရစ်စတယ်လ်ဂါးမင့်အင်န်နစ်တင်းအင်ဒက်စ်တရီကုမ္ပဏီ...       5           0.029240   \n",
+       "ရတနာနစ်တ်အင်န်ဂါးမန့်တ်မန်နူဖက်ချားရင်းကုမ္ပဏီလ...       5           0.029240   \n",
+       "ငွေပင်လယ်လှိုင်းတွန့်စက္ကူဘူးထုတ်လုပ်ရေးကုမ္ပဏီ...       4           0.023392   \n",
+       "ထွန်းပဒေသာအင်ဒတ်စတြီးစ်အင်န် ထရိတ်ဒင်းကုမ္ပဏီလီ...       4           0.023392   \n",
+       "မြန်မာမင်းဒွန်းဂါးမင့်မင်နျူဖက်ချားရင်း ကုမ္ပဏီ...       4           0.023392   \n",
        "\n",
        "                                                    eigenvector  closeness  \\\n",
-       "မြန်မာမင်းဒွန်းဂါးမင့်မင်နျူဖက်ချားရင်းကုမ္ပဏီလ...     0.523930   0.719408   \n",
-       "ထရိုင်းဒင့်မြန်မာဂျင်နရယ်ထရိတ်ဒင်းကုမ္ပဏီလီမိတက်       0.490881   0.677090   \n",
-       "စူပါဂါးမင့်န်ကုမ္ပဏီလီမိတက်                            0.111693   0.416043   \n",
-       "ခရစ်စတယ်လ်ဂါးမင့်အင်န်နစ်တင်းအင်ဒက်စ်တရီကုမ္ပဏီ...     0.102585   0.437109   \n",
-       "ရတနာနစ်တ်အင်န်ဂါးမန့်တ်မန်နူဖက်ချားရင်းကုမ္ပဏီလ...     0.102585   0.437109   \n",
-       "မြန်မာမင်းဒွန်းဂါးမင့်မင်နျူဖက်ချားရင်း ကုမ္ပဏီ...     0.100925   0.426316   \n",
-       "super ace international co  စူပါအေ့စ်အင်တာနေရှင...     0.100925   0.426316   \n",
-       "ငွေပင်လယ်လှိုင်းတွန့်စက္ကူဘူးထုတ်လုပ်ရေးကုမ္ပဏီ...     0.100925   0.426316   \n",
-       "အပိုလိုဂါးမင့်ကုမ္ပဏီလီမိတက်                           0.018530   0.295142   \n",
-       "ပစိဖိတ်ဂါးမင့် မင်နယူဖတ်ချားရင်း ကုမ္ပဏီ လီမိတက...     0.100925   0.426316   \n",
+       "မြန်မာမင်းဒွန်းဂါးမင့်မင်နျူဖက်ချားရင်းကုမ္ပဏီလ...     0.438080   0.745434   \n",
+       "ထရိုင်းဒင့်မြန်မာဂျင်နရယ်ထရိတ်ဒင်းကုမ္ပဏီလီမိတက်       0.434960   0.728178   \n",
+       "အရှေ့တိုင်းအထည်ချုပ်ကုမ္ပဏီလီမိတက်                     0.382035   0.680894   \n",
+       "စူပါဂါးမင့်န်ကုမ္ပဏီလီမိတက်                            0.056768   0.433296   \n",
+       "အုန်းမိသားစုကုမ္ပဏီလီမိတက်                             0.021807   0.329741   \n",
+       "ခရစ်စတယ်လ်ဂါးမင့်အင်န်နစ်တင်းအင်ဒက်စ်တရီကုမ္ပဏီ...     0.074167   0.472332   \n",
+       "ရတနာနစ်တ်အင်န်ဂါးမန့်တ်မန်နူဖက်ချားရင်းကုမ္ပဏီလ...     0.074167   0.472332   \n",
+       "ငွေပင်လယ်လှိုင်းတွန့်စက္ကူဘူးထုတ်လုပ်ရေးကုမ္ပဏီ...     0.073697   0.466726   \n",
+       "ထွန်းပဒေသာအင်ဒတ်စတြီးစ်အင်န် ထရိတ်ဒင်းကုမ္ပဏီလီ...     0.071733   0.476626   \n",
+       "မြန်မာမင်းဒွန်းဂါးမင့်မင်နျူဖက်ချားရင်း ကုမ္ပဏီ...     0.073697   0.466726   \n",
        "\n",
        "                                                    betweenness  \n",
-       "မြန်မာမင်းဒွန်းဂါးမင့်မင်နျူဖက်ချားရင်းကုမ္ပဏီလ...     0.417344  \n",
-       "ထရိုင်းဒင့်မြန်မာဂျင်နရယ်ထရိတ်ဒင်းကုမ္ပဏီလီမိတက်       0.335965  \n",
-       "စူပါဂါးမင့်န်ကုမ္ပဏီလီမိတက်                            0.003602  \n",
-       "ခရစ်စတယ်လ်ဂါးမင့်အင်န်နစ်တင်းအင်ဒက်စ်တရီကုမ္ပဏီ...     0.017885  \n",
-       "ရတနာနစ်တ်အင်န်ဂါးမန့်တ်မန်နူဖက်ချားရင်းကုမ္ပဏီလ...     0.017885  \n",
-       "မြန်မာမင်းဒွန်းဂါးမင့်မင်နျူဖက်ချားရင်း ကုမ္ပဏီ...     0.000416  \n",
-       "super ace international co  စူပါအေ့စ်အင်တာနေရှင...     0.000416  \n",
-       "ငွေပင်လယ်လှိုင်းတွန့်စက္ကူဘူးထုတ်လုပ်ရေးကုမ္ပဏီ...     0.000416  \n",
-       "အပိုလိုဂါးမင့်ကုမ္ပဏီလီမိတက်                           0.017973  \n",
-       "ပစိဖိတ်ဂါးမင့် မင်နယူဖတ်ချားရင်း ကုမ္ပဏီ လီမိတက...     0.000416  "
+       "မြန်မာမင်းဒွန်းဂါးမင့်မင်နျူဖက်ချားရင်းကုမ္ပဏီလ...     0.383041  \n",
+       "ထရိုင်းဒင့်မြန်မာဂျင်နရယ်ထရိတ်ဒင်းကုမ္ပဏီလီမိတက်       0.310449  \n",
+       "အရှေ့တိုင်းအထည်ချုပ်ကုမ္ပဏီလီမိတက်                     0.289890  \n",
+       "စူပါဂါးမင့်န်ကုမ္ပဏီလီမိတက်                            0.001183  \n",
+       "အုန်းမိသားစုကုမ္ပဏီလီမိတက်                             0.033758  \n",
+       "ခရစ်စတယ်လ်ဂါးမင့်အင်န်နစ်တင်းအင်ဒက်စ်တရီကုမ္ပဏီ...     0.011386  \n",
+       "ရတနာနစ်တ်အင်န်ဂါးမန့်တ်မန်နူဖက်ချားရင်းကုမ္ပဏီလ...     0.011386  \n",
+       "ငွေပင်လယ်လှိုင်းတွန့်စက္ကူဘူးထုတ်လုပ်ရေးကုမ္ပဏီ...     0.000310  \n",
+       "ထွန်းပဒေသာအင်ဒတ်စတြီးစ်အင်န် ထရိတ်ဒင်းကုမ္ပဏီလီ...     0.007964  \n",
+       "မြန်မာမင်းဒွန်းဂါးမင့်မင်နျူဖက်ချားရင်း ကုမ္ပဏီ...     0.000310  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1398,7 +1376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "id": "0580ed54",
    "metadata": {
     "scrolled": true
@@ -1409,7 +1387,7 @@
     "net.from_nx(island)\n",
     "net.width = '2000px'\n",
     "net.height = '1000px'\n",
-    "net.repulsion(node_distance=100, central_gravity=0.01,\n",
+    "net.repulsion(node_distance=200, central_gravity=0.01,\n",
     "              spring_length=300, spring_strength=0.01,\n",
     "              damping=0.09)\n",
     "net.save_graph(\"Highly-Connected_Companies.html\")"
